--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         <div class="col-4">
           <a href="">
             <img src="img/img01c.jpg" />
-            <h2>Rp.399.000</h2>
-            <span>Nike 01</span>
+            <h2>Rp 2.200.000</h2>
+            <span>Nike Air Jordan 1</span>
             <div class="social-networks">
               <div class="inner">
                   <a target="_blank" href="https://www.facebook.com/profile.php?id=100084562346551" class=" hint--bounce hint--top hint--theme-two" aria-label="Facebook"><i class="fab fa-facebook-f"></i>
@@ -95,8 +95,8 @@
         <div class="col-4">
           <a href="">
             <img src="img/img02.jpg" />
-            <h2>Rp.459.000</h2>
-            <span>Adidas 02</span>
+            <h2>Rp 2.300.000</h2>
+            <span>Nike Air Jordan V</span>
             <div class="social-networks">
               <div class="inner">
                   <a target="_blank" href="https://www.facebook.com/profile.php?id=100084562346551" class=" hint--bounce hint--top hint--theme-two" aria-label="Facebook"><i class="fab fa-facebook-f"></i>
@@ -115,8 +115,8 @@
         <div class="col-4">
           <a href="">
             <img src="img/img03.jpg" />
-            <h2>Rp.259.000</h2>
-            <span>Vans 3</span>
+            <h2>Rp 4.100.000</h2>
+            <span>Nike Air Max 90 Ultra Essential</span>
             <div class="social-networks">
               <div class="inner">
                   <a target="_blank" href="https://www.facebook.com/profile.php?id=100084562346551" class=" hint--bounce hint--top hint--theme-two" aria-label="Facebook"><i class="fab fa-facebook-f"></i>
@@ -135,8 +135,8 @@
         <div class="col-4">
           <a href="">
             <img src="img/img04.jpg" />
-            <h2>Rp.329.000</h2>
-            <span>Reebook 4</span>
+            <h2>Rp 1.429.000</h2>
+            <span>Nike Mens's Blazer Mid'77 Vintage</span>
             <div class="social-networks">
               <div class="inner">
                   <a target="_blank" href="https://www.facebook.com/profile.php?id=100084562346551" class=" hint--bounce hint--top hint--theme-two" aria-label="Facebook"><i class="fab fa-facebook-f"></i>
@@ -156,8 +156,8 @@
         <div class="col-4">
           <a href="">
             <img src="img/img05.jpg" />
-            <h2>Rp.759.000</h2>
-            <span>Adidas 23</span>
+            <h2>Rp 4.600.000</h2>
+            <span>Nike Air Jordan 1 High OG TS SP Travis Scott</span>
             <div class="social-networks">
               <div class="inner">
                   <a target="_blank" href="https://www.facebook.com/profile.php?id=100084562346551" class=" hint--bounce hint--top hint--theme-two" aria-label="Facebook"><i class="fab fa-facebook-f"></i>
@@ -177,8 +177,8 @@
         <div class="col-4">
           <a href="">
             <img src="img/img06.jpg" />
-            <h2>Rp.229.000</h2>
-            <span>Nike 6</span>
+            <h2>Rp 1.300.000</h2>
+            <span>Air Force 1 Low Travis Scott Cactus</span>
             <div class="social-networks">
               <div class="inner">
                   <a target="_blank" href="https://www.facebook.com/profile.php?id=100084562346551" class=" hint--bounce hint--top hint--theme-two" aria-label="Facebook"><i class="fab fa-facebook-f"></i>
@@ -198,8 +198,8 @@
         <div class="col-4">
           <a href="">
             <img src="img/skechers.jpg" />
-            <h2>Rp.899.000</h2>
-            <span>Skechers</span>
+            <h2>Rp 650.000/h2>
+            <span>Skechers Gowalk 5</span>
             <div class="social-networks">
               <div class="inner">
                   <a target="_blank" href="https://www.facebook.com/profile.php?id=100084562346551" class=" hint--bounce hint--top hint--theme-two" aria-label="Facebook"><i class="fab fa-facebook-f"></i>
@@ -219,8 +219,8 @@
         <div class="col-4">
           <a href="">
             <img src="img/asics.jpg" />
-            <h2>Rp.1.259.300</h2>
-            <span>ASICS GEL-LYTE III</span>
+            <h2>Rp 1.300.000</h2>
+            <span>ASICS Gel Lyte 3 'Tokyo</span>
             <div class="social-networks">
               <div class="inner">
                   <a target="_blank" href="https://www.facebook.com/profile.php?id=100084562346551" class=" hint--bounce hint--top hint--theme-two" aria-label="Facebook"><i class="fab fa-facebook-f"></i>
